# look-like-scanned

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  script.js  styles.css
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  pylint.yml  python-publish.yml  tests.yml
scanner/: __init__.py  args_parser.py  scanner.py
tests/: test_scanner.py
