[tool.poetry]
name = "look-like-scanned"
version = "1.1.0"
description = "Python script to make documents look like they were scanned."
authors = ["navchandar <12165092+navchandar@users.noreply.github.com>"]
repository = "https://github.com/navchandar/look-like-scanned"
homepage = "https://navchandar.github.io/look-like-scanned/"
readme = "README.md"
keywords = ["pdf", "scan", "scanner", "image-to-pdf", "pdf-to-scan", "convert-pdf"]
packages = [
    { include = "scanner" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Text Processing",
]

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^10.2.0"
pypdfium2 = "^5.0.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"

[tool.poetry.scripts]
scanner = "scanner:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/navchandar/look-like-scanned/issues"
"Funding" = "https://www.buymeacoffee.com/navchandar/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(module)s.%(funcName)s.%(lineno)d: %(message)s"
log_cli_date_format = "%H:%M:%S"
